name:                advent-of-code
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/advent-of-code#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , D1InverseCaptcha
                     , D2CorruptionChecksum
                     , D3SpiralMemory
                     , D4HighEntropyPassphrases
                     , D5Maze
                     , D6MemoryAllocation
                     , D7RecursiveCircus
                     , D8Registers
                     , D9StreamProcessing
                     , D10KnotHash
                     , D11HexEd
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , split
                     , text
  default-language:    Haskell2010

executable advent-of-code-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent-of-code
                     , containers
                     , either-unwrap
                     , parsec
                     , HUnit
  other-modules:       Common
                     , D1InverseCaptchaTest
                     , D2CorruptionChecksumTest
                     , D3SpiralMemoryTest
                     , D4HighEntropyPassphrasesTest
                     , D5MazeTest
                     , D6MemoryAllocationTest
                     , D7RecursiveCircusTest
                     , D8RegistersTest
                     , D9StreamProcessingTest
                     , D10KnotHashTest
                     , D11HexEdTest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent-of-code
